--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Arial";
+    font-family: courier;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -10,10 +10,10 @@ body
 #container
 {
     width: 70%;
-    padding: lem;
+    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
-    margin: auto;
+    margin: 0 auto;
 }
 
 #container h1
